<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Patea La Palma</string>
    <string name="app_name_login_page">Hiking\nLa Palma</string>
    <string name="title_sendero_detail">Sendero Detail</string>

    <!-- External APIs IDs-->
    <string name="api_fb_id">1420618671581509</string>

    <!-- Settings -->
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <string name="action_logout">Close Session</string>
    <string name="action_login">Open Session</string>

    <!-- Config String -->
    <string name="server_ip" translatable="false">http://ec2-52-17-59-95.eu-west-1.compute.amazonaws.com</string>
    <string name="server_port" translatable="false">7200</string>
    <string name="clientid_imgur">e29cd388bb8b764</string>
    <string name="clientsecret_imgur">4e46a425b115cae945d7f0f5d3944660599d764c</string>

    <!-- Title Tabs -->
    <string name="group_recommend_senderos">Groups</string>
    <string name="recommend_senderos">For you</string>
    <string name="all_senderos">All Hikes</string>
    <string name="title_activity_recommender">Recommender</string>
    <string name="title_tab_info_security">For Your own Safety</string>
    <string name="title_tab_info_warnings">Warnings</string>
    <string name="title_tab_info_codes">Codes</string>

    <!-- Titles Elements -->
    <string name="title_popup_comments">Comments</string>
    <string name="title_popup_map">Full Hike</string>

    <!-- Placeholders -->
    <string name="ph_write_comment">Write a comment...</string>

    <!-- Title Buttons -->
    <string name="btn_title_login">Login</string>
    <string name="btn_como_llegar">How to get there?</string>

    <!-- TextView -->
    <string name="tv_anonymous_mode">Login Incognito Mode</string>

    <!-- Name Shared Preferences -->
    <string name="sp_sharedpreferences">sp_patealapalma</string>
    <string name="sp_fb_id">SPFBID</string>
    <string name="sp_fb_name">SPFBNAME</string>
    <string name="sp_fb_img_profile">SPFBIMGPROFILE</string>

    <!-- Name Temp Image (Take Camera Pictures) -->
    <string name="temp_picture">tempPLP.jpg</string>

    <!-- Messages -->
    <string name="anonymous">Incognito</string>
    <string name="select_picture">Select a Picture</string>
    <string name="upload_picture">Uploading Picture</string>
    <string name="upload_comment">Sending Comment</string>
    <string name="upload_rating">Sending Rating</string>
    <string name="procesando">Please, wait... Processing...</string>
    <string name="take_picture">Take a Picture</string>
    <string name="gallery_picture">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="login_required">Login is required</string>
    <string name="title_activity_info">Information of Interest</string>
    <string name="dialog_rating_title">Your Rating</string>
    <string name="dialog_rating_subtitle">FROM 1 TO 5</string>
    <string name="dialog_rating_footer_subtitle">CLOSE</string>
    <string name="dialog_rating_footer_confirm">Agree</string>
    <string name="more_comments">More Comments</string>
    <string name="no_comments">There are NO Comments.\nBe the first to comment!</string>
    <string name="process_title">Processing</string>
    <string name="load_db">Configuring the Database for the first time. This may take several minutes. Be patient, NO internet connection required.</string>

    <string name="no_hikes_for_you">No recommended hikes for you</string>

    <!-- File Names -->
    <string name="initial_file">senderos.json</string>

    <!-- Codes Colors Senderos -->
    <string name="senderocc_correct">Correct</string>
    <string name="senderocc_incorrect">Incorrect</string>
    <string name="senderocc_direction">Change in Direction</string>
    <string name="senderocc_gr">G.R.</string>
    <string name="senderocc_pr">P.R.</string>
    <string name="senderocc_sl">S.L.</string>

    <!-- Info Senderos -->
    <string name="sendero_security_info">
        <![CDATA[
            &#8226; Go always accompanied.
            <br/>
            <br/>
            &#8226; Give details of your inteded route to someone before setting off.
            <br/>
            <br/>
            &#8226; Carry a mobile phone.
            <br/>
            <br/>
            &#8226; Take sufficient water and food.
            <br/>
            <br/>
            &#8226; Clothing and foodwear should correspond to the degree of difficulty of the hike.
        ]]>
    </string>
    <string name="sendero_warning_info">
        <![CDATA[
            &#8226; Do not stray from the sign-posted paths.
            <br/>
            <br/>
            &#8226; Do not take plants, animals, rocks or archaelogical remains with you.
            <br/>
            <br/>
            &#8226; Do not light fires.
            <br/>
            <br/>
            &#8226; Camp only at the campsites.
            <br/>
            <br/>
            &#8226; Do not leave or throw away rubbish.
            <br/>
            <br/>
            &#8226; Do not make noise to alter animals.
        ]]>
    </string>
    <string name="prev_text">Previous</string>
    <string name="next_text">Next</string>
    <string name="done_text">Done</string>
    <string name="recommender_title">Questionnaire</string>
    <string name="fail_question">You must answer the question</string>
    <string name="close">Close</string>
    <string name="prev_resume_recommender">It will generate a summary of selected responses</string>
    <string name="resume_recommender">Summary of the Questionnaire</string>
    <string name="fail_internet">Fail Internet Connection</string>
    <string name="qPeople">How many people go to the Hike?</string>
    <string name="qPeopleLess5">Less than 5 people</string>
    <string name="qPeople5y10">Between 5 and 10 people.</string>
    <string name="qPeopleMore10">More than 10 people.</string>
    <string name="qChildren">Attend children to Hike?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="qTime">How much you want to spend the walk?</string>
    <string name="qTimeLess1">Less than 1 hour</string>
    <string name="qTimeLess2">Less than 2 hours</string>
    <string name="qTimeLess4">Less than 4 hours</string>
    <string name="qTimeMore4">More than 4 hours</string>
    <string name="qDifficulty">Level of difficulty you want?</string>
    <string name="qDifficultyLow">Low Level</string>
    <string name="qDifficultyMedium">Normal Level</string>
    <string name="qDifficultyHigh">High Level</string>
    <string name="qDifficultyExtreme">Extreme Level</string>
    <string name="qDate">What Date did you want to Hike?</string>
    <string name="qWaterPoints">Do you want the Hike has Water Points?</string>
    <string name="noRatio">Not Rated</string>
    <string name="itemWater">Water Needed</string>
    <string name="itemCircular">Round-Trip</string>
    <string name="itemDifficulty">Difficulty</string>
    <string name="itemTime">Time Duration</string>
    <string name="itemType">Hike Type</string>
    <string name="itemRate">Rating:</string>
    <string name="itemDistance">Distance</string>


</resources>
