<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jelcaf.pacomf.patealapalma.fragment.LoginFragment">

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="italic"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:text="@string/app_name_login_page"
        android:layout_above="@+id/btn_login"/>

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_anonymous"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="#1E88E5"
        android:text="@string/btn_title_login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_anonymous"
        android:layout_centerHorizontal="true"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:text="@string/tv_anonymous_mode"  />

</RelativeLayout>
