<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="@android:color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8sp">

        <com.jelcaf.pacomf.patealapalma.views.SimpleDataView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sendero_distance_view"
            custom:mytitle="Distancia"
            custom:myvalue="3 km"
            custom:image="@drawable/markers"
            android:padding="4sp"
            android:layout_weight="2"/>

        <com.jelcaf.pacomf.patealapalma.views.SimpleDataView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sendero_difficulty_view"
            custom:mytitle="Dificultad"
            custom:myvalue="Máxima"
            custom:image="@drawable/bar_chart"
            android:padding="4sp"
            android:layout_weight="2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8sp">

        <com.jelcaf.pacomf.patealapalma.views.SimpleDataView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sendero_water_view"
            custom:mytitle="Agua Recomendada"
            custom:myvalue="1,5 L"
            android:padding="4sp"
            android:layout_weight="2"/>

        <com.jelcaf.pacomf.patealapalma.views.SimpleDataView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sendero_circular_view"
            custom:mytitle="Circular"
            custom:myvalue="Si"
            custom:image="@drawable/circular"
            android:padding="4sp"
            android:layout_weight="2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8sp">

        <com.jelcaf.pacomf.patealapalma.views.SimpleDataView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sendero_time"
            custom:mytitle="Duración aproximada"
            custom:myvalue="3h 4m"
            custom:image="@drawable/time"
            android:padding="4sp"
            android:layout_weight="2"/>

        <com.jelcaf.pacomf.patealapalma.views.SimpleDataView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sendero_tipo"
            custom:mytitle="Tipo Sendero"
            custom:myvalue="Pequeño Recorrido"
            android:padding="4sp"
            android:layout_weight="2"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8sp">

        <com.jelcaf.pacomf.patealapalma.views.SimpleDataView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sendero_rating_view"
            custom:mytitle="Rating"
            custom:myvalue="5,6"
            custom:image="@drawable/rating"
            android:padding="4sp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"/>

    </LinearLayout>


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_margin="10dp"
        android:layout_gravity="top">

        <com.jelcaf.pacomf.patealapalma.views.CustomMapView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/map"
            android:padding="6sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/clickMap"
            android:padding="6sp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_margin="10dp"
        android:layout_gravity="top">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/tvComments"
                android:layout_marginTop="5dp"
                android:text="@string/title_popup_comments" />

            <ListView
                android:id="@+id/listViewComments"
                android:layout_width="match_parent"
                android:layout_below="@+id/tvComments"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/no_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@+id/tvComments"
                android:gravity="center"
                android:text="@string/no_comments"
                android:visibility="gone"
                android:layout_above="@+id/showMoreComments"
                />

            <Button
                android:id="@+id/showMoreComments"
                android:layout_below="@id/listViewComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/more_comments"
                android:background="@drawable/selector_bg_button"
                android:textColor="@color/black_overlay"
                android:textSize="@dimen/sample_text_size"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>
